<resources>
    <string name="app_name">H2H</string>
    <string name="unexpected_error">An unexpected error occurred!</string>
    <string name="noConnection">No Internet Connection</string>
    <string name="turnOnInternet">Turn On your Internet Connection</string>
    <string name="mobileData">Mobile Data</string>
    <string name="Wifi">Wifi</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_login">Sign Up!</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone no.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In!</string>
    <string name="home">Home</string>
    <string name="nursing_assessment">Nursing Assessment</string>
    <string name="daily_flow_sheet">Daily Flow Sheet:-Patient 1</string>
    <string name="daily_flow_sheet2">Daily Flow Sheet:-Patient 2</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="chk_list"> Skills Checklist</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="save">Save</string>
    <string name="person_contacts">Patient Information</string>
    <string name="name">Name* :</string>
    <string name="dob">DOB* :</string>
    <string name="received_report_form">Report Form</string>
    <string name="respiratory_assessment_score_ras">Respiratory Assessment Score (RAS)</string>
    <string name="resp">Resp</string>
    <string name="breath_sounds">Breath Sounds</string>
    <string name="fio2">FiO2</string>
    <string name="_21_25">21–25</string>
    <string name="_20"><![CDATA[<20]]></string>
    <string name="temperature">Temperature  </string>
    <string name="pulse">Pulse </string>
    <string name="u2022_cap_refill_3_secs"><![CDATA[• Cap refill < 3 secs]]></string>
    <string name="neurological">Neurological</string>
    <string name="u2022_alert_amp_oriented_x3"><![CDATA[• Alert & Oriented X3]]></string>
    <string name="u2022_behaviour_appropriate_to_situation">• Behaviour Appropriate to situation</string>
    <string name="u2022_active_rom_of_all_extremities">• Active ROM of all Extremities</string>
    <string name="u2022_speech_appropriate">• Speech appropriate</string>
    <string name="u2022_perrl">• PERRL</string>
    <string name="u2022_reflexes_intact_gag_swallow_blink_cough">• Reflexes intact (Gag, Swallow, Blink, Cough)</string>
    <string name="wnl">WNL</string>
    <string name="exceptions">Exceptions :</string>
    <string name="exceptions_extra">Exceptions</string>
    <string name="pulmonary">Pulmonary</string>
    <string name="u2022_respirations_unlabored_amp_regular"><![CDATA[• Respirations unlabored & regular]]></string>
    <string name="u2022_bbs_clear">• BBS clear</string>
    <string name="u2022_symmetrical_chest_expansion">• Symmetrical chest expansion</string>
    <string name="u2022_nail_beds_pink">• Nail beds pink</string>
    <string name="tracheostomy">Tracheostomy</string>
    <string name="o2_l_min_rate_cannula_mask">O2 _____ L/min Rate</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="u2022_radial_pedial_pulses_regular_strong_amp_palpable_bilaterally"><![CDATA[• Radial-Pedial pulses regular, strong & palpable bilaterally]]></string>
    <string name="u2022_no_peripheral_edema">• No peripheral edema</string>
    <string name="u2022_no_edema">• No edema</string>
    <string name="u2022_homan_s_negative">• Homan’s negative</string>
    <string name="u2022_no_jvd">• No JVD</string>
    <string name="u2022_apical_pulse_regular">• Apical pulse regular</string>
    <string name="u2022_radial_pulse_regular_s1_amp_s2_audible"><![CDATA[• Radial pulse regular, S1 & S2 audible]]></string>
    <string name="heart_rhythm">Heart Rhythm :</string>
    <string name="edema">Edema :</string>
    <string name="capillary_refill">Capillary Refill :</string>
    <string name="fatigue">Fatigue</string>
    <string name="dizziness">Dizziness</string>
    <string name="gastrointestinal">Gastrointestinal</string>
    <string name="u2022_abdomen_soft_non_tender_non_distended">• Abdomen soft, non-tender, non distended</string>
    <string name="u2022_bowel_sounds_active_x4">• Bowel sounds active X4</string>
    <string name="u2022_tolerated_diet">• Tolerated diet</string>
    <string name="u2022_normal_chewing_and_swallowing">• Normal chewing and swallowing</string>
    <string name="exceptions_g_tube_ng_tube_incontinent_nausea_vomiting_constipation_diarrhea">Exceptions</string>
    <string name="bowel_sounds">Bowel Sounds</string>
    <string name="genito_urinary">Genito-Urinary</string>
    <string name="u2022_urine_clear">• Urine clear</string>
    <string name="u2022_no_odor">• No odor</string>
    <string name="u2022_color_yellow_to_amber">• Color yellow to amber</string>
    <string name="u2022_continent">• Continent</string>
    <string name="exceptions_incontinent_urgency_frequency">Frequency</string>
        <string name="exceptions_ch">Exceptions</string>
        <string name="incontinent_ch">Incontinent</string>
        <string name="urgency_ch">Urgency</string>
    <string name="frequency">Frequency</string>
    <string name="urine_odor">Urine Odor</string>
    <string name="urine_color">Urine Color</string>
    <string name="integumentary">Integumentary</string>
    <string name="u2022_warm_dry_pink">• Warm, dry, pink</string>
    <string name="u2022_elastic_turgor">• Elastic turgor</string>
    <string name="u2022_intact">• Intact</string>
    <string name="u2022_mucous_membranes_moist_pink">• Mucous membranes moist, pink</string>
    <string name="exceptions_bruising_fragile_rash_petechiae_acne_abrasion">Exceptions</string>
    <string name="musculoskeletal">Musculoskeletal</string>
    <string name="u2022_absence_of_joint_swelling_or_tenderness">• Absence of joint swelling or tenderness</string>
    <string name="u2022_normal_rom_of_all_joints">• Normal ROM of all joints</string>
    <string name="u2022_independent_gait">• Independent gait</string>
    <string name="braces">Braces</string>
    <string name="mobility">Mobility</string>
    <string name="psychosocial">Psychosocial</string>
    <string name="u2022_appropriate_appearance_amp_behavior"><![CDATA[• Appropriate appearance & behavior]]></string>
    <string name="u2022_verbalizations_appropriate_to_situation">• Verbalizations appropriate to situation</string>
    <string name="u2022_memory_intact">• Memory intact</string>
    <string name="u2022_appropriate_affect">• Appropriate affect</string>
    <string name="exceptions_nonverbal">Exceptions: Nonverbal</string>
    <string name="pain">Pain</string>
    <string name="u2022_experiencing_no_pai">• Experiencing no pain</string>
    <string name="signature">Signature</string>
    <string name="submit">Save</string>
    <string name="weekly_flow_sheet">Weekly Flow Sheet</string>
    <string name="h2h_representative">H2H Representative :</string>
    <string name="title">Title :</string>
    <string name="client">Client :</string>
    <string name="pay_period">Pay Period :</string>
    <string name="monday">Monday</string>
    <string name="date">Date* :</string>
    <string name="time_in">Time In :</string>
    <string name="time_out">Time Out :</string>
    <string name="lunch">Lunch :</string>
    <string name="class_room">Location :</string>
    <string name="day_total">Day Total :</string>
    <string name="total_hours">Total Hours :</string>
    <string name="comments">Comments :</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="h2h_representative_signature">H2H Representative Signature</string>
    <string name="client_signature">Client Signature</string>
    <string name="weekly_time_sheet">Weekly Time Sheet</string>
    <string name="done">Done</string>
    <string name="received_report_from">Received report from :</string>
    <string name="nursing_notes">Nursing Notes</string>
    <string name="old_password">Old Password</string>
    <string name="star">******</string>
    <string name="new_password">New Password</string>
    <string name="daily_notes">Nursing Notes</string>
    <string name="spo2">SpO2</string>
    <string name="oxygen">Oxygen</string>
    <string name="respiration">Respiration</string>
    <string name="lung_sounds">Lung Sounds</string>
    <string name="work_of_breathing">Work of Breathing</string>
    <string name="intervention_time">Intervention Time</string>
    <string name="ras_score">RAS Score</string>
    <string name="intervention">Intervention</string>
    <string name="quantity">Quantity</string>
    <string name="stime">Bus Arrival Time</string>
    <string name="color">Color</string>
    <string name="etime">Bus DropOff Time</string>
    <string name="consistency">Consistency</string>
    <string name="duration">Duration</string>
    <string name="intervention_outcome">Intervention Outcome</string>
    <string name="bloodglucose">Blood Glucose</string>
    <string name="g_tube_site">G Tube Site</string>
    <string name="nutrition">Nutrition/Oral Feeding</string>
    <string name="input">Input(including formula)</string>
    <string name="output">Output</string>
    <string name="position">Position</string>
    <string name="assist_independent">Assist/Independent</string>
    <string name="participating_in">Participating In</string>
    <string name="stretched">Stretched</string>
    <string name="medication">Medication / Insulin Administration</string>
    <string name="vent_Decompress_Abd">Vent/Decompress Abd</string>
    <string name="teach">Teach</string>
    <string name="tpn">Monitor TPN</string>
    <string name="report_given_to">Report given to</string>
    <string name="g_tube">G- tube</string>
    <string name="incontinent">Incontinent</string>
    <string name="nausea">Nausea</string>
    <string name="vomiting">Vomiting</string>
    <string name="constipation">Constipation</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="bruising">Bruising</string>
    <string name="fragile_skin">Fragile Skin</string>
    <string name="rash">Rash</string>
    <string name="petechiae">Petechiae</string>
    <string name="acne">Acne</string>
    <string name="abrasion">Abrasion</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="info_h2hmedical_com">info@h2hmedical.com</string>
    <string name="_394_w_main_st_nste_202_nlehi_ut_84043">40 North 200 West Lehi, UT 84043</string>
    <string name="_385_374_1975">801-448-7765</string>
    <string name="_888_529_4681">(888) 529–4681</string>
    <string name="error_dob">Patient\'s DOB year must be over 1990</string>
    <string name="error_year">Patient\'s DOB month must be 01 to 12</string>
    <string name="error_date">Patient\'s DOB <Date></Date> must be 01 to 31</string>
    <string name="error_dd_mm_yyyy">Please enter a two-digit month, two-digit day, and four-digit year</string>
    <string name="future_sate_not_allow">Parent\'s DOB can\'t enter future date.</string>
</resources>