<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.ContactUsActivity">

    <RelativeLayout style="@style/ContactToolbar">

        <ImageView
            style="@style/ContactToolbarIcon"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <TextView
            style="@style/ContactToolbarText"
            android:layout_centerVertical="true"
            android:text="@string/contact_us"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".60"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:src="@drawable/white_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:orientation="vertical">

            <TextView
                style="@style/ContactUsFieldHeading"
                android:gravity="center"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:text="@string/info_h2hmedical_com"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                style="@style/ContactUsFieldHeading"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/address"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_394_w_main_st_nste_202_nlehi_ut_84043"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                style="@style/ContactUsFieldHeading"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:text="@string/_385_374_1975"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                style="@style/ContactUsFieldHeading"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/fax"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_888_529_4681"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>