<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/edit_profile"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/EditProfilePictureLayout"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_user_profile"
                    android:layout_width="@dimen/dp_130"
                    android:layout_height="@dimen/dp_130"
                    android:src="@drawable/ic_profile" />

                <RelativeLayout
                    android:id="@+id/rl_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@color/black"
                        android:gravity="center"
                        android:text="@string/edit_photo"
                        android:textSize="@dimen/sp_15"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                style="@style/EditProfileLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/EditProfileHeading"
                    android:text="@string/user_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/EditProfileEditText"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    style="@style/EditProfileHeading"
                    android:text="@string/email"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/EditProfileEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    style="@style/EditProfileHeading"
                    android:text="@string/phone_no"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/EditProfileEditText"
                    android:hint="@string/phone_no"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tv_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/change_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_35"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/background_login_button"
                    android:paddingLeft="@dimen/dp_40"
                    android:paddingRight="@dimen/dp_40"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>